--- a/style.css
+++ b/style.css
@@ -57,3 +57,68 @@
   right: 15px;
   cursor: pointer;
 }
+@media only screen and (max-width: 1024px) {
+  .container {
+    padding-left: 5%;
+    padding-top: 5%;
+  }
+  .container h1 {
+    font-size: 30px;
+  }
+  .container button {
+    font-size: 14px;
+    padding: 12px 20px;
+  }
+  .input-box {
+    max-width: 400px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .container {
+    padding-left: 3%;
+    padding-top: 6%;
+  }
+  .container h1 {
+    font-size: 28px;
+  }
+  .container button {
+    font-size: 14px;
+    padding: 10px 18px;
+  }
+  .input-box {
+    max-width: 350px;
+    min-height: 130px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .container {
+    padding-left: 2%;
+    padding-top: 8%;
+    text-align: center;
+  }
+  .container h1 {
+    font-size: 24px;
+    flex-direction: column;
+    align-items: center;
+  }
+  .container h1 img {
+    width: 50px;
+  }
+  .container button {
+    font-size: 12px;
+    padding: 10px 15px;
+    justify-content: center;
+  }
+  .input-box {
+    max-width: 90%;
+    min-height: 120px;
+    margin: 10px auto;
+  }
+  .input-box img {
+    width: 20px;
+    bottom: 10px;
+    right: 10px;
+  }
+}
